<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.CreateAlbumFragment">

    <TextView
        android:id="@+id/title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="7dp"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        android:text="@string/nuevo_album"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/divider6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider6"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="8dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title2" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/divider6">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/new_album_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:textColorHint="#606060"
            app:boxBackgroundColor="@android:color/transparent"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/main_orange"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:placeholderTextColor="#ED1515">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/album_name_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Nombre"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/new_album_image"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:textColorHint="#606060"
            app:boxBackgroundColor="@android:color/transparent"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/main_orange"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/new_album_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/album_image_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Portada"
                android:inputType="textUri" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/new_album_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:textColorHint="#606060"
            app:boxBackgroundColor="@android:color/transparent"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/main_orange"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/new_album_image">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/album_date_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Fecha de lanzamiento"
                android:inputType="date" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/new_album_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:textColorHint="#606060"
            app:boxBackgroundColor="@android:color/transparent"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/main_orange"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/new_album_date">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/album_description_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|left"
                android:hint="Descripción"
                android:minLines="3"
                android:nestedScrollingEnabled="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/new_album_gender"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/placeholer_gender_dropdown"
            android:hint="@string/placeholer_gender_dropdown"
            android:importantForAccessibility="no"
            android:textColorHint="#606060"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/new_album_description"
            app:strokeColor="@color/main_orange"
            app:strokeWidth="2dp">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/genderDropdown"
                android:importantForAccessibility="no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/new_album_label"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/placeholer_label_dropdown"
            android:hint="@string/placeholer_label_dropdown"
            android:importantForAccessibility="no"
            android:textColorHint="#606060"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/new_album_gender"
            app:strokeColor="@color/main_orange"
            app:strokeWidth="2dp">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/labelDropdown"
                android:importantForAccessibility="no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/cancel_button"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif"
            android:text="Cancelar"
            android:textColor="@color/main_orange"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/buttonpost"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/new_album_label"
            app:strokeColor="@color/main_orange" />

        <Button
            android:id="@+id/buttonpost"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif"
            android:text="Guardar"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cancel_button"
            app:layout_constraintTop_toBottomOf="@+id/new_album_label" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>