...
    android:background="#121212"
    android:weightSum="3"
    android:baselineAligned="false"
    tools:context=".view.NavBarFragment">

    <ImageButton
        android:id="@+id/buttonIconCollectors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@null"
        android:contentDescription="@string/collectors_button_description"
        android:padding="0pt"
        android:scaleType="centerInside"
        android:src="@drawable/person"
        android:tint="#929292" />

    <ImageButton
        android:id="@+id/buttonIconAlbums"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@null"
        android:contentDescription="@string/albums_button_description"
        android:padding="0pt"
...
